crates/aion-awl/tests/fixtures/rev2/header-types/valid/workflow_timeout.awl
//! Process a report within the six-hour workflow deadline.
workflow timed_report
  timeout 6h
  input report: String
  outcome processed: type Report, route success

type Report { text: String }

worker reports
  action process(report: String) -> Report

step process_report
  report |> process |> route processed
