crates/aion-awl/tests/fixtures/rev2/header-types/invalid/doc_line_after_header.awl
//! Ping a host and report its status.
workflow ping_host
  input host: String
  outcome reported: type Status, route success

type Status { host: String, alive: Bool }
//! Late narration is not narration at all.

worker ping
  action check(host: String) -> Status

step check_host
  host |> check |> route reported
